--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,11 @@ ipykernel = "^6.29.5"
 yfinance = "^0.2.55"
 python-docx = "^1.1.2"
 langchain-opentutorial = "^0.0.8"
+fastapi = "^0.111.0"
+passlib = { version = "^1.7.4", extras = ["bcrypt"] }
+python-jose = { version = "^3.3.0", extras = ["cryptography"] }
+uvicorn = "^0.30.1"
+aiomysql = "^0.2.0"
 
 [build-system]
 requires = ["poetry-core"]
